@@ -1,3 +1,6 @@
+* Thu Feb 26 2004 Gennady Feldman <gennady_feldman at gena01.com>
+- Allow sending of "add me" message to buddy when we add them
+
 * Thu Feb  5 2004 Philip Tellis
 - Fix crash in yahoo search because we were using a different yahoo_input
 
